--- a/style.css
+++ b/style.css
@@ -122,3 +122,40 @@ body {
   color: black;
   border-radius: 50px;
 }
+
+#projectSection {
+  margin-top: 21vh;
+  padding: 30px 40px;
+  position: relative;
+  height: 100%;
+}
+
+#pInfo {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #8e8e8e;
+  padding: 5vh 0;
+  position: relative;
+}
+
+#pInfo h1 {
+  font-size: 8vw;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1;
+  opacity: 0.7;
+}
+
+.infoLast {
+  border-bottom: 1px solid #8e8e8e;
+}
+
+#pInfo img {
+  position: absolute;
+  height: 150%;
+  z-index: 10;
+  opacity: 0;
+  display: none;
+}
