Home Page Completed

--- a/style.css
+++ b/style.css
@@ -227,3 +227,21 @@ body {
   opacity: 0.7;
   font-size: 13px !important;
 }
+
+footer {
+  margin-top: 21vh;
+  padding: 30px 40px;
+  position: relative;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#footer-left,
+#footer-right {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  text-transform: uppercase;
+}
