Locomotive Scroll Elements Disappear Fixed

--- a/locomotive.css
+++ b/locomotive.css
@@ -18,6 +18,19 @@ html.has-scroll-dragging {
   min-height: 100vh;
 }
 
+[data-scroll-container] {
+  perspective: 999999px !important;
+}
+
+html.has-scroll-smooth {
+  overflow: hidden; /* fix */
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
 [data-scroll-direction="horizontal"] [data-scroll-container] {
   height: 100vh;
   display: inline-block;
