--- a/style.css
+++ b/style.css
@@ -24,12 +24,13 @@ body {
 
 #nav {
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: space-between;
 }
 
 #nav a {
-  color: white;
+  color: white !important;
   text-decoration: none;
   font-size: 18px;
   font-weight: bold;
