--- a/style.css
+++ b/style.css
@@ -41,6 +41,16 @@ body {
   font-size: 16px !important;
 }
 
+.bounding {
+  /* background-color: red; */
+  width: fit-content;
+  overflow: hidden;
+}
+
+.boundingElement {
+  transform: translateY(100%);
+}
+
 #heading {
   margin-top: 15vh;
 }
@@ -55,6 +65,10 @@ body {
 
 #subHeading {
   width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: end;
 }
 
 #subHeading h1 {
@@ -70,6 +84,9 @@ body {
 
 #freelanceInfo {
   margin-top: 12vh;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 #freelanceInfo h5 {
