--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body {
   transition: 0.7s all ease-in-out;
 }
 
-#pInfo h1:hover {
+#pInfo:hover h1 {
   opacity: 0.3;
   cursor: pointer;
   margin-left: 4vw;
@@ -181,7 +181,7 @@ body {
 #pInfo img {
   position: absolute;
   height: 150%;
-  z-index: 10;
+  /* z-index: 10; */
   opacity: 0;
   display: none;
 }
